--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   },
-  "homepage": "/"
+  "homepage": "https://uchihadsenju.github.io/docky-flypat/"
 }
