--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "docky",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://uchihadsenju.github.io/docky-flypat/",
   "type": "module",
   "scripts": {
     "dev": "vite",
